   Zhekov, thanks).
 * src/interface.c, src/keybindings.c, src/ui_utils.c, geany.glade:
   Restore top-level editor popup item 'Find Document Usage'.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Remove duplicates in 'Insert Comments' editor popup menu; rename
   submenu 'More'.
   Separate main menu insertion comments depending on number of times
   used in a document.


2010-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Fix build with GTK 2.12: explicitly include gio.h if GIO
   is available and to be used regardless of the USE_GIO_FILEMON flag.
 * wscript:
   Fix installation of template files.
   Show which regex implementation is used.
 * src/ui_utils.c:
   Use non-GIO mime-type icon lookup if GIO lookup fails.
 * autogen.sh:
   Allow skipping configure during autogen by setting NOCONFIGURE=1
   (thanks to Chow Loong Jin).


2010-11-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Make use_safe_file_saving hidden pref apply even when GIO is
   available, because g_file_replace_contents() doesn't handle disk
   space exhaustion.
 * src/main.c:
   Show GIO/built-in regex support in startup debug message as well as
   for --version.
 * doc/geany.txt, doc/geany.html:
   Add docs for the HTMLChars plugin (patch by Frank).


2010-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Do not translate 'name' field for filetype None because it is used
   for hash table lookup. This fixes missing files in the Open dialog
   for the 'All files' filter with non-English locales (thanks to Sardem
   FF7, fixes #3094771).
 * src/filetypes.c, src/filetypes.h, src/document.c, src/symbols.c,
   src/ui_utils.c:
   Add filetypes_get_display_name() to get translations for filetype
   None.
 * src/document.c:
   Fix resource leak when saving files with GIO (patch by Colomban
   Wendling, thanks).


2010-11-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
