@@ -7,9 +7,9 @@ commentline=comment
 commentdoc=commentdoc
 commentdocnested=commentdoc
 number=number
-word=word
-word2=word2
-word3=word2
+word=keyword
+word2=keyword2
+word3=keyword2
 typedef=type
 string=string
 stringeol=stringeol
