@@ -4,7 +4,7 @@ default=default
 comment=comment
 variable=default
 number=number
-keyword=word
+keyword=keyword
 string=string
 operator=operator
 atom=default
@@ -22,7 +22,7 @@ atom_quoted=default
 macro_quoted=default
 record_quoted=default
 node_name_quoted=default
-bifs=word2
+bifs=keyword2
 modules=default
 modules_att=preprocessor
 unknown=default
