@@ -6,8 +6,8 @@ comment=comment
 commentline=comment
 commentdoc=commentdoc
 number=number
-word=word
-word2=word2
+word=keyword
+word2=keyword2
 string=string
 character=string
 uuid=extra
