@@ -6,7 +6,7 @@ commentline=comment
 number=number
 string=string
 character=string
-word=word
+word=keyword
 triple=string
 tripledouble=commentdoc
 classname=type,bold
