@@ -6,8 +6,8 @@ comment=comment
 comment_line=comment
 comment_line_bang=comment
 number=number
-word=word
-word2=word2
+word=keyword
+word2=keyword2
 word3=0x5ea01f;;true
 string=string
 preprocessor=preprocessor
