@@ -10,6 +10,8 @@
    submenu 'More'.
    Separate main menu insertion comments depending on number of times
    used in a document.
+ * data/filetypes.*, data/colorschemes/alt.conf:
+   Rename word/word2 named styles to keyword/keyword2.
 
 
 2010-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
